# example-web-server

./: .env.template  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  example_web_server.postman_collection.json  package-lock.json  tailwind.config.js
migrations/2022-01-21-005731_create_products_and_ifus/: down.sql  up.sql
migrations/2022-01-21-215945_create_users/: up.sql
migrations/2022-01-23-174912_alter_users/: down.sql  up.sql
migrations/2022-01-23-213518_create_files/: up.sql
migrations/2022-01-24-220222_alter_ifus/: down.sql  up.sql
migrations/2022-01-25-122330_alter_ifus_constraint/: down.sql  up.sql
migrations/2022-01-25-152019_alter_products_constraint/: down.sql  up.sql
src/: connection.rs  main.rs  models.rs  repository.rs  routes.rs  schema.rs
src/models/: files.rs  ifus.rs  products.rs  users.rs
src/repository/: files.rs  ifus.rs  products.rs  users.rs
src/routes/: files.rs  healthcheck.rs  ifus.rs  products.rs  users.rs  website.rs
static/css/: styles.css
templates/: base.html.tera  index.html.tera
