[package]
name = "example_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
diesel = { version = "1.4.8", features = ["chrono"] }
serde = "1.0.134"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
